<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffa500"
    tools:context="com.citu.litenote.activities.ItemActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_items"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvItem" />

    <TextView
        android:id="@+id/text_view_no_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/label_no_items"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        fab:menu_animationDelayPerItem="50"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="#800000"
        fab:menu_colorPressed="#FF4500"
        fab:menu_colorRipple="@android:color/white"
        fab:menu_fab_size="normal"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_style="@style/AppTheme"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="14sp"
        fab:menu_openDirection="up">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_photo_camera_white"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_colorRipple="@android:color/white"
            fab:fab_label="@string/label_take_photo"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_get_from_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_photo_library_white"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_colorRipple="@android:color/white"
            fab:fab_label="@string/label_get_from_gallery"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_import_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_file_upload_white"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_colorRipple="@android:color/white"
            fab:fab_label="@string/label_import_file"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_add_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_note_add_white"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_colorRipple="@android:color/white"
            fab:fab_label="@string/label_add_note"
            fab:fab_size="mini" />
    </com.github.clans.fab.FloatingActionMenu>

    <TextView
        android:id="@+id/tvItem"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="serif-monospace"
        android:gravity="left"
        android:text="Your Note/s:"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold|italic" />

</RelativeLayout>
